--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+title: Campus Resource Scheduler
+description: Central hub for community resources at UH.
+google_analytics:
+show_downloads: false
 theme: jekyll-theme-minimal
+github:
+  is_project_page: true
+  repository_url: https://github.com/campus-resource-scheduler-project/campus-resource-scheduler
+gems:
+  - jekyll-mentions
